# CS100-Final-Project

./: .gitignore  CMakeLists.txt  README.md  menuTest  promptInheritancePrototype.cpp
menuTesting/: fixingMenu.cpp  menuSelection.cpp  menuSelectionTest.cpp  menuTest.cpp
src/: main.cpp  menuPromptTest.cpp  wizards.h
src/git/: gitAdd.cpp  gitAdd.h  gitBranch.cpp  gitBranch.h  gitCheckout.cpp  gitCheckout.h  gitCommand.cpp  gitCommand.h  gitCommands.h  gitCommit.cpp  gitCommit.h  gitDeleteBranch.cpp  gitDeleteBranch.h  gitError.h  gitListBranches.cpp  gitListBranches.h  gitNewBranch.cpp  gitNewBranch.h  gitPull.cpp  gitPull.h  gitPush.cpp  gitPush.h  gitStatus.cpp  gitStatus.h
src/stringPrompt/: stringPrompt.cpp  stringPrompt.h  stringPrompts.h
src/test/: gitStatusTests.cpp
src/ui/: README.md  TerminalPrompt.cpp  TerminalPrompt.h  YesOrNoPrompt.cpp  YesOrNoPrompt.h  combineYNString.cpp  combineYNString.h  conio.h  menuPrompt.cpp  menuPrompt.h  menuPromptTest.cpp  prompts.h  stringPrompt.cpp  stringPrompt.h
test/: StringPromptTests.cpp  YesOrNoPromptTests.cpp  combineYNStringTests.cpp  gitBranchTests.cpp  gitPullTests.cpp  gitPushTests.cpp  gitStatusTests.cpp
